# async-python-sprint-2

./: job.py  logs_setup.py  main.py  scheduler.py  scheduler_tasks.py  tasks.py  utils.py
.github/workflows/: app-testing.yml
async-python-sprint-2/: pyproject.toml
logger/: logger.py
scheduler_data/: URL.py
tests/: unit_tests.py
